...
            self.presenter?.didUpdateProgressValue(self.webView.estimatedProgress)
        }
    }
    
    override func viewWillAppear(_ animated: Bool) {
        super.viewWillAppear(animated)
        webView.accessibilityIdentifier = "UnsplashWebView"
    }
    
    func load(request: URLRequest) {
        webView.load(request)
    }
    
...
